--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Bitter&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.less">
+  <link rel="stylesheet" href="./components/Todo.css">
   <link rel="icon" href="favicon.ico" />
   <script src="index.js" defer></script>
   <title>React Components and Component State</title>
